<?xml version="1.0" encoding="utf-8"?>


<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/parent_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:descendantFocusability="blocksDescendants"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_movie_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimaryDark"
                    android:gravity="center_vertical"
                    android:padding="20dp"
                    android:textColor="@android:color/white"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    tools:text="Movie Name" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/iv_movies_poster"
                        android:layout_width="100dp"
                        android:layout_height="150dp"
                        android:layout_margin="30dp"
                        android:contentDescription="@string/cd_movie_poster_iv"
                        android:scaleType="centerCrop" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_release_date_value"
                            style="@style/releaseDateAndVoteTextViewStyle"
                            android:layout_marginTop="30dp"
                            android:textSize="30sp"
                            tools:text="2018" />

                        <TextView
                            android:id="@+id/tv_vote_avg_value"
                            style="@style/releaseDateAndVoteTextViewStyle"
                            tools:text="7.8/10" />

                        <Button
                            android:id="@+id/btn_favorite"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/mark_as_favorite" />
                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:id="@+id/tv_plot_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:textColor="@android:color/black"
                    tools:text="Plot starts from here...." />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="2dip"
                    android:background="@android:color/black" />
            </LinearLayout>

            <TextView
                android:id="@+id/no_internet"
                style="@style/textViewStyle"
                android:padding="20dp"
                tools:text="@string/no_internet" />

            <TextView
                android:id="@+id/tv_trailer_header"
                style="@style/headerViewStyle"
                android:text="@string/trailer_header"
                tools:text="@string/trailer_header" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_trailers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_reviews_header"
                style="@style/headerViewStyle"
                android:text="@string/reviews_header"
                tools:text="@string/reviews_header" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_reviews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</FrameLayout>